# 2025-fall-main

./: .gitignore  pyproject.toml
assignment/: submit.sh
assignment/a0/: a0.ipynb  answers
assignment/a1/: NNBasics.ipynb  TensorFlow.ipynb  answers
assignment/a2/: Text_classification_BERT.ipynb  Text_classification_BERT_clean.ipynb  Text_classification_CNN.ipynb  Text_classification_DAN.ipynb  answers  nb-sanitize-widgets.sh
assignment/a2/notebook_bak/: Learning_Obj.md  Learning_Obj2.md  Text_classification_BERT_bak.ipynb  Text_classification_CNN_bak.ipynb
assignment/a3/: Machine_Translation_with_T5.ipynb  SummarizationLLM_test.ipynb  Summarization_test.ipynb  answers
assignment/a4/: answers  image_captioning.ipynb
materials/lesson_notebooks/: Text_Generation_web.html  Text_Generation_web.ipynb  lesson_10_RAG.ipynb  lesson_10_embedding_based_retrieval.ipynb  lesson_1_NN_Review.ipynb  lesson_1_WordEmbeddings_and_Analogies.ipynb  lesson_2_DAN_CNN_text_classification.ipynb  lesson_3_adding_RNNs_and_attention_to_classification_notebook.ipynb  lesson_4_BERT.ipynb  lesson_5_Text_Generation.ipynb  lesson_6_Machine_Translation.ipynb  lesson_6_Machine_Translation_Shakespeare_T5.ipynb  lesson_8_Modern_BERT.ipynb  lesson_8_Parsing.ipynb  lesson_9_Entities_and_Linking.ipynb
materials/walkthrough_notebooks/peft/lora/: Lora_(Roberta_Large)_pytorch.ipynb
project/: README.md
src/: nb-sanitize-widgets.sh
syllabus/: README.md
