[project]
name = "2025-fall-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.2"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "tensorflow[and-cuda]>=2.19.0",
    "transformers>=4.55.4",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6",
    "pyzmq>=26",
    "tornado>=6.4",
    "traitlets>=5.14",
    "pyyaml>=6.0.2",
]
