[project]
name = "2025-fall-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.2"
dependencies = [
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.1",
    "datasets>=2.19.0",
    "evaluate>=0.4.2",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6",
    "numpy>=1.26,<2.0",
    "pandas>=2.2.2",
    "pyyaml>=6.0.2",
    "pyzmq>=26",
    "scipy>=1.11",
    "sentencepiece>=0.1.99",
    "torch>=2.2.0",
    "torchinfo>=1.8.0",
    "tornado>=6.4",
    "traitlets>=5.14",
    "transformers>=4.55.4",
    "tqdm>=4.66.2",
    "scikit-learn>=1.7.2",
]
